# sixela

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
DOCS/: CHANGELOG.md
src/: dither.rs  error.rs  lib.rs  other.rs  output.rs  pixelformat.rs  quant.rs  tosixel.rs
src/dither/: mod.rs  palettes.rs
src/output/: builder.rs  dither_fns.rs  enums.rs  mod.rs
src/quant/: diffuse_fns.rs  mod.rs
src/tosixel/: dither_fns.rs  mod.rs
