[package]
name = "sixela"
description = "A 100% rust sixel library."
version = "0.2.0-wip"
edition = "2021"
rust-version = "1.82.0"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/sixela"
documentation = "https://docs.rs/sixela"
license = "MIT OR Apache-2.0"
include = [
	"/Cargo.toml",
	"/DOCS/*", "/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
]
categories = ["rendering::graphics-api", "no-std"]
keywords = ["sixel"]
publish = true


[features] # 8/300 (292 remaining), 8 visible, 0 hidden
# ==============================================================================

# environment
# ------------------------------
std = ["alloc", "devela/std"]
alloc = ["devela/alloc"]
no_std = ["devela/libm"]
#no_std = ["devela/dep_libm"]#WIP

# safety
# ------------------------------
safe = []
safest = ["devela/safe"]
unsafe = []
unsafest = ["devela/unsafe"]

# nightly
# ------------------------------
nightly = [
	"nightly_doc",
] # enables all the following features:
	# WAIT: [doc_cfg](https://github.com/rust-lang/rust/issues/43781)
	# WAIT: [doc_notable_trait](https://github.com/rust-lang/rust/issues/45040)
	nightly_doc = []

# capabilities
# ------------------------------
default = ["std"] # for now, almost everything depends on alloc

[dependencies]
# ==============================================================================
devela = { version = "0.21.2", features = [] }
#devela = { version = "0.22.0-wip", path = "../devela", features = [] }#WIP


[package.metadata.docs.rs]
# ==============================================================================
no-default-features = true
features = ["_docsrs"]
